--- a/Sovereignty-Jurisdiction-and-Civil-Divisions-of-the-State/1-Sovereignty-and-Juristiction-of-the-State/1.02 -United-States-sites-and-buildings.md
+++ b/Sovereignty-Jurisdiction-and-Civil-Divisions-of-the-State/1-Sovereignty-and-Juristiction-of-the-State/1.02 -United-States-sites-and-buildings.md
@@ -3,8 +3,8 @@
 
 Subject to the conditions mentioned in s. [1.03](http://docs.legis.wisconsin.gov/document/statutes/1.03) the legislature consents to the acquisitions heretofore effected and hereafter to be effected by the United States, by gift, purchase or condemnation proceedings, of the title to places or tracts of land within the state; and, subject to said conditions, the state grants, cedes and confirms to the United States exclusive jurisdiction over all such places and tracts. Such acquisitions are limited to the following purposes:
 
-1. To sites for the erection of forts, magazines, arsenals, dockyards, custom houses, courthouses, post offices, or other public buildings or for any purpose whatsoever contemplated by the 17th clause of section 8 of article one of the United States constitution.
+1. To sites for the erection of forts, magazines, arsenals, dockyards, custom houses, courthouses, post offices, or other public buildings or for any purpose whatsoever contemplated by the [17th clause of section 8 of article one of the United States constitution](http://docs.legis.wisconsin.gov/document/usconstitution/Art.%20I,%20sec.%208,%2017th%20clause).
 2. To all land now or hereafter included within the boundaries of Fort McCoy in townships 17, 18 and 19 north, ranges 2 and 3 west, near Sparta, in Monroe County, to be used for military purposes as a target and maneuvering range and such other purposes as the department of the army deems necessary and proper.
 3. To erect thereon dams, abutments, locks, lockkeepers' dwellings, chutes, or other structures necessary or desirable in improving the navigation of the rivers or other waters within and on the borders of this state.
 4. To the SW 1/4 of the NE 1/4 of section 6, township 19 north, range 2 west of the fourth principal meridian to be used for military purposes as a target and maneuvering range and such other purposes as the department of the army deems necessary and proper.
-    + History: 1985 a. 135.
+    + History: [1985 a. 135](http://docs.legis.wisconsin.gov/document/acts/1985/135).
