Update 1.10 State song, state ballad, state waltz, state dance, and state symbols.md

--- a/Sovereignty-Jurisdiction-and-Civil-Divisions-of-the-State/1-Sovereignty-and-Juristiction-of-the-State/1.10 State song, state ballad, state waltz, state dance, and state symbols.md
+++ b/Sovereignty-Jurisdiction-and-Civil-Divisions-of-the-State/1-Sovereignty-and-Juristiction-of-the-State/1.10 State song, state ballad, state waltz, state dance, and state symbols.md
@@ -2,10 +2,8 @@
 ==========================================================================
 
 1. The Wisconsin state song is "On, Wisconsin", music written by W. T. Purdy, the words to which are as follows: "On, Wisconsin! On, Wisconsin! Grand old badger state! We, thy loyal sons and daughters, Hail thee, good and great. On, Wisconsin! On, Wisconsin! Champion of the right, `Forward', our motto — God will give thee might!".
-
-  m.  The Wisconsin state ballad is "Oh Wisconsin, Land of My Dreams," music written by Shari A. Sarazin and lyrics written by Erma Barrett, the words to which are as follows: "Oh Wisconsin, land of beauty, with your hillsides and your plains, with your jackpine and your birch tree, and your oak of mighty frame. Land of rivers, lakes and valleys, land of warmth and winter snows, land of birds and beasts and humanity, oh Wisconsin, I love you so. Oh Wisconsin, land of my dreams. Oh Wisconsin, you're all I'll ever need. A little heaven here on earth could you be? Oh Wisconsin, land of my dreams. In the summer, golden grain fields; in the winter, drift of white snow; in the springtime, robins singing; in the autumn, flaming colors show. Oh I wonder who could wander, or who could want to drift for long, away from all your beauty, all your sunshine, all your sweet song? Oh Wisconsin, land of my dreams. Oh Wisconsin, you're all I'll ever need. A little heaven here on earth could you be? Oh Wisconsin, land of my dreams. And when it's time, let my spirit run free in Wisconsin, land of my dreams."
-
-  r.  The Wisconsin state waltz is "The Wisconsin Waltz," music and lyrics written by Eddie Hansen, the words to which are as follows: "Music from heaven throughout the years; the beautiful Wisconsin Waltz. Favorite song of the pioneers; the beautiful Wisconsin Waltz. Song of my heart on that last final day, when it is time to lay me away. One thing I ask is to let them play the beautiful Wisconsin Waltz. My sweetheart, my complete heart, it's for you when we dance together; the beautiful Wisconsin Waltz. I remember that September, before love turned into an ember, we danced to the Wisconsin Waltz. Summer ended, we intended that our lives then would both be blended, but somehow our planning got lost. Memory now sings a dream song, a faded love theme song; the beautiful Wisconsin Waltz."
+  1.  The Wisconsin state ballad is "Oh Wisconsin, Land of My Dreams," music written by Shari A. Sarazin and lyrics written by Erma Barrett, the words to which are as follows: "Oh Wisconsin, land of beauty, with your hillsides and your plains, with your jackpine and your birch tree, and your oak of mighty frame. Land of rivers, lakes and valleys, land of warmth and winter snows, land of birds and beasts and humanity, oh Wisconsin, I love you so. Oh Wisconsin, land of my dreams. Oh Wisconsin, you're all I'll ever need. A little heaven here on earth could you be? Oh Wisconsin, land of my dreams. In the summer, golden grain fields; in the winter, drift of white snow; in the springtime, robins singing; in the autumn, flaming colors show. Oh I wonder who could wander, or who could want to drift for long, away from all your beauty, all your sunshine, all your sweet song? Oh Wisconsin, land of my dreams. Oh Wisconsin, you're all I'll ever need. A little heaven here on earth could you be? Oh Wisconsin, land of my dreams. And when it's time, let my spirit run free in Wisconsin, land of my dreams."
+  2.  The Wisconsin state waltz is "The Wisconsin Waltz," music and lyrics written by Eddie Hansen, the words to which are as follows: "Music from heaven throughout the years; the beautiful Wisconsin Waltz. Favorite song of the pioneers; the beautiful Wisconsin Waltz. Song of my heart on that last final day, when it is time to lay me away. One thing I ask is to let them play the beautiful Wisconsin Waltz. My sweetheart, my complete heart, it's for you when we dance together; the beautiful Wisconsin Waltz. I remember that September, before love turned into an ember, we danced to the Wisconsin Waltz. Summer ended, we intended that our lives then would both be blended, but somehow our planning got lost. Memory now sings a dream song, a faded love theme song; the beautiful Wisconsin Waltz."
 
 2.  The Wisconsin state dance is the polka.
 
