Update 1.08 State flag.md

--- a/Sovereignty-Jurisdiction-and-Civil-Divisions-of-the-State/1-Sovereignty-and-Juristiction-of-the-State/1.08 State flag.md
+++ b/Sovereignty-Jurisdiction-and-Civil-Divisions-of-the-State/1-Sovereignty-and-Juristiction-of-the-State/1.08 State flag.md
@@ -2,19 +2,11 @@
 ===============
 
 1.  The Wisconsin state flag consists of the following features:
-
-    a. Relative dimensions of 2 to 3, hoist to fly.
-
-    b. A background of royal blue cloth.
-
-    c. The state coat of arms, as described under s. [1.07](), in material of appropriate colors, applied on each side in the center of the field, of such size that, if placed in a circle whose diameter is equal to 50% of the hoist, those portions farthest from the center of the field would meet, but not cross, the boundary of the circle.
-
-    d. The word "WISCONSIN" in white, capital, condensed Gothic letters, one-eighth of the hoist in height, centered above the coat of arms, midway between the uppermost part of the coat of arms and the top edge of the flag.
-
-    e. The year "1848" in white, condensed Gothic numbers, one-eighth of the hoist in height, centered below the coat of arms, midway between the lowermost part of the coat of arms and the bottom edge of the flag.
-
-    f. Optional trim on the edges consisting of yellow knotted fringe.
-    
-2. The department of administration shall ensure that all official state flags that are manufactured on or after May 1, 1981 conform to the requirements of this section. State flags manufactured before May 1, 1981 may continue to be used as state flags.
-
-  + History: [1979 c. 286](http://docs.legis.wisconsin.gov/document/acts/1979/286).
+    1.  Relative dimensions of 2 to 3, hoist to fly.
+    2.  A background of royal blue cloth.
+    3.  The state coat of arms, as described under s. [1.07](), in material of appropriate colors, applied on each side in the center of the field, of such size that, if placed in a circle whose diameter is equal to 50% of the hoist, those portions farthest from the center of the field would meet, but not cross, the boundary of the circle.
+    4.  The word "WISCONSIN" in white, capital, condensed Gothic letters, one-eighth of the hoist in height, centered above the coat of arms, midway between the uppermost part of the coat of arms and the top edge of the flag.
+    5.  The year "1848" in white, condensed Gothic numbers, one-eighth of the hoist in height, centered below the coat of arms, midway between the lowermost part of the coat of arms and the bottom edge of the flag.
+    6.  Optional trim on the edges consisting of yellow knotted fringe.
+    7.  The department of administration shall ensure that all official state flags that are manufactured on or after May 1, 1981 conform to the requirements of this section. State flags manufactured before May 1, 1981 may continue to be used as state flags.
++ History: [1979 c. 286](http://docs.legis.wisconsin.gov/document/acts/1979/286).
